[package]
name = "leptos-github"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-beta", features = ["csr", "nightly"] }
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "main" }
