[package]
name = "leptos-github"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = { version = "0.7.8" }
reactive_stores = "0.1.8"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
