[package]
name = "leptos-github"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8.0-beta", features = ["csr"] }
leptos_router = "0.8.0-beta"
reactive_stores = "0.2.0-beta"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
